# homework_OOP_1

./: pyproject.toml
main/: Category.py  Grass.py  Product.py  Smartphone.py
tests/: test_cod.py
